--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,13 @@ sudo: required
 install:
 - wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_Linux-64bit.deb
 - sudo dpkg -i hugo*.deb
-- cd ./public
 
 script:
   - hugo
 
+before_deploy:
+  - cd ./public
+  
 deploy:
   provider: firebase
   token:
