--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
 title = "My New Hugo Site"
-theme = "hugo-theme-minos"
+theme = "minos"
 copyright = "© 2016 Copyright Reini Urban"
 uglyURLs = true
 categories = [ "cperl", "rperl" ]
