--- a/config.toml
+++ b/config.toml
@@ -37,7 +37,7 @@ theme = "hugo-bootstrap"
     weight = 3
 
 [languages.zh]
-  languageName = "Chinese Simplified"
+  languageName = "简体中文"
 
   [[languages.zh.menu.main]]
     url = "/zh/"
