--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ theme = "hugo-bootstrap"
   category = "categories"
 
 # Google analytics
-# googleAnalytics = ""
+ googleAnalytics = "UA-134954108-1"
 
 [languages.en]
   languageName = "English"
@@ -86,4 +86,4 @@ theme = "hugo-bootstrap"
 
   [params.footer]
     # Color scheme for the footer (default: "light")
-     colorScheme = "dark"
+    # colorScheme = "dark"
