--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://vitoho.ml"
+baseurl = "https://vitoho.ml/"
 title = "Vito's Collection"
 languageCode = "en-us"
 defaultContentLanguage = "en"
