--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ install:
 
 script:
   - sudo hugo
-  #- sudo npm install hugo-algolia
-  #- sudo hugo-algolia -s
+  - sudo npm install hugo-algolia
+  - sudo hugo-algolia -s
 
 before_deploy:
   #- cd ./public
