--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,21 @@
 language: go node_js
 sudo: enable
 
+node_js:
+  - 10
+  - 9
+  - 8
+  - 7
+  - 6
+
 install:
 - wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_Linux-64bit.deb
 - sudo dpkg -i hugo*.deb
 
 script:
   - sudo hugo
-  - sudo npm install hugo-algolia
+  - npm test
+  - npm install hugo-algolia
   - sudo hugo-algolia -s
 
 before_deploy:
