--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,6 @@ sudo: enable
 
 node_js:
   - 10
-  - 9
-  - 8
-  - 7
-  - 6
 
 install:
 - wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_Linux-64bit.deb
@@ -14,9 +10,8 @@ install:
 
 script:
   - sudo hugo
-  - npm test
   - npm install hugo-algolia
-  - sudo hugo-algolia -s
+  - hugo-algolia -s
 
 before_deploy:
   #- cd ./public
