--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ sudo: enable
 node_js:
   - 10
 
+branches:
+  only:
+  - master
+  - stable
+
 install:
 - wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_${HUGO_VERSION}_Linux-64bit.deb
 - sudo dpkg -i hugo*.deb
