--- a/config.toml
+++ b/config.toml
@@ -1,99 +1,153 @@
 baseurl = "https://vitoho.ml/"
 title = "Vito's Collection"
-languageCode = "en-us"
-defaultContentLanguage = "en"
-
-# Pagination
-paginate = 10
-paginatePath = "page"
+#languageCode = "en-us"
 
 # Theme to use
 theme = "bilberry-hugo"
 
-[taxonomies]
-  tag = "tags"
-  category = "categories"
 
-# Google analytics
- #googleAnalytics = "UA-1-2"
+enableRobotsTXT = true
 
-[languages.en]
-  languageName = "English"
+# Change to one of your content languages definded at the end.
+DefaultContentLanguage = "en"
 
-  # Replace the default footer message with a localized message
-  # copyright = "Hugo template made with ❤ by Xzya"
+# Enable / Disable Google Analytics statistics for your site
+googleAnalytics = ""
 
-  [[languages.en.menu.main]]
-    url = "/"
-    name = "Home"
-    weight = 1
-  [[languages.en.menu.main]]
-    url = "/about/"
-    name = "About"
-    weight = 2
-  [[languages.en.menu.main]]
-    url = "/contact/"
-    name = "Contact"
-    weight = 3
+# Enable / Disable comments on the articles via Disqus.
+disqusShortname = "bilberry-hugo-theme"
 
-[languages.zh]
-  languageName = "简体中文"
-
-  [[languages.zh.menu.main]]
-    url = "/zh/"
-    name = "主页"
-    weight = 1
-  [[languages.zh.menu.main]]
-    url = "/about/"
-    name = "关于"
-    weight = 2
-  [[languages.zh.menu.main]]
-    url = "/contact/"
-    name = "联系"
-    weight = 3
-
-# Links format
-
-[permalinks]
-  post = "/:year/:month/:title/"
+# Enable / Disable open link with a new tab.
+[blackfriday]
+  hrefTargetBlank = false
 
 [params]
-  # Main sections (currently used for the recent posts in the sidebar)
-  mainSections = ["post"]
+  # Favicon for the browser's favorites and tabs
+  favicon = "" # set a favicon icon
 
-  # Default author
-  author = "Vito Ho"
+  # Custom CSS / JS modules that will be imported by the template.
+  # Files are relative to the static/ directory or a URL.
+  # Files are imported in the order they appear here, after
+  # theme.css and theme.js, respectively.
+  css_modules = []
+  js_modules = []
 
-  # Date format (default: Jan 2, 2006)
-  # date_format = "Jan 2, 2006"
+  # Description and meta data for the search engines
+  author = "Lednerb"
+  description = "Bilberry Premium Theme for Hugo."
+  keywords = "blog,personal,responsive,search,font awesome,pages,posts,multilingual,highlight.js,syntax highlighting,premium,shortcuts"
 
-  # Display post summaries instead of content in list templates (default: true)
-  # truncate = false
+  # How many articles should be displayed at once?
+  paginate = 7
 
-  [params.sidebar]
-    # Whether to show the recent posts or not (default: true)
-    # showRecent = false
+  # Enable / Disable MathJax
+  enable_mathjax    = false
 
-    # Whether to show the taxonomies or not (default: true)
-    # showTaxonomy = false
+  # Enable / Disable algolia search
+  algolia_search    = true
+  algolia_appId     = "Y2C4RWMPXW"
+  algolia_apiKey    = "50ea7f8c41c0ad233926e0be2b769ed1"
+  algolia_indexName = "default-content"
+    # Set this option to false if you want to search within all articles in all languages at once
+    algolia_currentLanguageOnly = true
 
-    # How many posts to show on the sidebar (Default: 5)
-    # num_recent_posts = 5
+  # Style configuration
+    # set the width of your site's content
+    siteWidth = "800px"
 
-  [params.header]
-    # Color scheme for the header (default: "light")
-     colorScheme = "dark"
+    # let hugo automatically resize and crop your images to the correct sizes
+    resizeImages = true
 
-  [params.footer]
-    # Color scheme for the footer (default: "light")
-    # colorScheme = "dark"
+  # Header configuration
+    # your subtitle if you want to use any
+    subtitle = "Hello World! This is the most epic subtitle ever."
+
+    # if you want to use gravatar for the header image
+    gravatarEMail = "code@lednerb.de"
+
+    # set an path to the image file you want to use | overwrites gravatar
+    customImage = ""
+
+    # define the icon you want to use for the overlay for the customImage or gravatar.
+    overlayIcon = "fa-home"
+
+    # always display the top navigation (with pages and search) on non-mobile screens
+    permanentTopNav = false
+
+    # show a language chooser in the header
+    showHeaderLanguageChooser = true
+
+  # Content configuration
+    # Enable an optional pinned page to display at the top of the index
+    # pinnedPost = "/content/github/"
+    # Set to true to pin only to the first page, false to all pages
+    # pinOnlyToFirstPage = true
+
+    # enable automatical localization of the article's PublishedDate with momentjs
+    enableMomentJs = true
+
+    # customize the date format | only works if momentjs is disabled | only works with English month names
+    # you can customize it with the options you find here:
+    # https://gohugo.io/functions/format/#hugo-date-and-time-templating-reference
+    dateFormat = "2006-01-02"
+
+    # display the estimated reading time for an article
+    showReadingTime = false
+
+  # Footer configuration
+    showFooter = true
+
+    # How many articles should be displayed at latest posts in the footer?
+    # Set to -1 to hide the 'Latest Posts' column
+    amountLatestPostsInFooter = 7
+
+    # How many categories should be displayed in the footer section?
+    # Set to -1 to hide the 'Categories' column
+    amountCategoriesInFooter = 7
+
+    # show a language chooser in the footer
+    showFooterLanguageChooser = true
+
+    # social media profile urls for the footer links
+    showSocialMedia = true
+
+    facebook   = ""
+    twitter    = "https://twitter.com/TheRealLednerb"
+    googleplus = ""
+    pinterest  = ""
+    instagram  = ""
+    tumblr     = ""
+    youtube    = ""
+    vimeo      = ""
+    github     = "https://github.com/Lednerb"
+    xing       = ""
+    linkedin   = ""
+
+    # credits line configuration
+    copyrightBy = "by Lednerb"
+    copyrightUseCurrentYear = false  # set to true to always display the current year in the copyright
+    copyrightYearOverride = "2017"
+    copyrightUrl = "https://github.com/Lednerb"
+    creditsText = "Bilberry Hugo Theme"
+    creditsUrl = "https://github.com/Lednerb/bilberry-hugo-theme"
 
 
-  [outputFormats.Algolia]
-    baseName = "algolia"
-    isPlainText = true
-    mediaType = "application/json"
-    notAlternative = true
+# customize your available languages for your multi-langual site
+# or delete the [Languages] blog to use the theme with only one supported language
+[Languages]
+  [Languages.en]
+    weight = 1
+  [Languages.de]
+    weight = 2
+    title = "Mein cooler neuer Blog"
+    subtitle = "Hallo Welt! Dies ist der epischste Untertitel aller Zeiten."
 
-  [outputs]
-    home = ["HTML", "RSS", "Algolia"]
+# don't change anything below
+[taxonomies]
+  author   = "author"
+  tag      = "tags"
+  category = "categories"
+
+[outputs]
+  home = [ "HTML", "JSON", "RSS" ]
+  page = [ "HTML" ]
