--- a/config.toml
+++ b/config.toml
@@ -45,8 +45,8 @@ disqusShortname = ""
 
   # Enable / Disable algolia search
   algolia_search    = true
-  algolia_appId     = "Y2C4RWMPXW"
-  algolia_apiKey    = "50ea7f8c41c0ad233926e0be2b769ed1"
+  algolia_appId     = "3O4AZ7YKWQ"
+  algolia_apiKey    = "${ALGOLIA_API_KEY}"
   algolia_indexName = "default-content"
     # Set this option to false if you want to search within all articles in all languages at once
     algolia_currentLanguageOnly = true
