--- a/config.toml
+++ b/config.toml
@@ -46,7 +46,7 @@ disqusShortname = ""
   # Enable / Disable algolia search
   algolia_search    = true
   algolia_appId     = "3O4AZ7YKWQ"
-  algolia_apiKey    = "${ALGOLIA_API_KEY}"
+  algolia_apiKey    = "e7cbdc0c77d5126dc420f63961ff0711"
   algolia_indexName = "default-content"
     # Set this option to false if you want to search within all articles in all languages at once
     algolia_currentLanguageOnly = true
