--- a/config.toml
+++ b/config.toml
@@ -23,14 +23,14 @@ disqusShortname = ""
 
 [params]
   # Favicon for the browser's favorites and tabs
-  favicon = "" # set a favicon icon
+  favicon = "favicon.ico" # set a favicon icon
 
   # Custom CSS / JS modules that will be imported by the template.
   # Files are relative to the static/ directory or a URL.
   # Files are imported in the order they appear here, after
   # theme.css and theme.js, respectively.
-  css_modules = []
-  js_modules = []
+  #css_modules = []
+  #js_modules = []
 
   # Description and meta data for the search engines
   author = "Lednerb"
@@ -49,7 +49,7 @@ disqusShortname = ""
   algolia_apiKey    = "11af88491bfd14fff5a56f283d65a9cc"
   algolia_indexName = "default"
     # Set this option to false if you want to search within all articles in all languages at once
-    algolia_currentLanguageOnly = true
+    algolia_currentLanguageOnly = false
 
   # Style configuration
     # set the width of your site's content
