--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ branches:
   - stable
 
 before_install:
-  - npm install -g n
-  - sudo pip install urllib3[secure] awscli --upgrade --user
+  - wget -q -O libstdc++6 http://security.ubuntu.com/ubuntu/pool/main/g/gcc-5/libstdc++6_5.4.0-6ubuntu1~16.04.10_amd64.deb
+  - sudo dpkg --force-all -i libstdc++6
 
 install:
   - wget https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_Linux-64bit.deb
