--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -21,6 +21,9 @@ googleAnalytics = "UA-134954108-2"
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
 
+# Code Highlight
+pygmentsCodeFences = true
+
 ############################
 ## Advanced options below ##
 ############################
