--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -26,7 +26,7 @@ logo = ""
 
 # Enable global source code highlighting? true/false
 # Documentation: https://sourcethemes.com/academic/docs/writing-markdown-latex/#highlighting-options
-highlight = true
+highlight = false
 # highlight_languages = ["R"]  # Add support for highlighting additional languages
 # highlight_style = "ir-black"  # For supported styles, see https://cdnjs.com/libraries/highlight.js/
 
