--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -10,18 +10,13 @@
 
 [[main]]
   name = "Posts"
-  url = "#posts"
+  url = "posts"
   weight = 20
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
+  name = "About"
+  url = "#about"
   weight = 30
-
-[[main]]
-  name = "Publications"
-  url = "#featured"
-  weight = 40
 
 [[main]]
   name = "Contact"
