--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -58,7 +58,7 @@ address = "Shunde, Foshan, Guangdong, China"
 office_hours = ""
 
 # Enter an optional link for booking appointments (e.g. calendly.com).
-appointment_url = "https://calendly.com/vitoho"
+appointment_url = "https://vitoho.ml/book"
 
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
