--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -36,8 +36,8 @@ enableGitInfo = true
 
 # Default language to use (if you setup multilingual support)
 defaultContentLanguage = "en"
-hasCJKLanguage = true  # Set `true` for Chinese/Japanese/Korean languages.
-defaultContentLanguageInSubdir = true
+hasCJKLanguage = false  # Set `true` for Chinese/Japanese/Korean languages.
+defaultContentLanguageInSubdir = false
 
 paginate = 10  # Number of items per page in paginated lists.
 enableEmoji = true
