--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -21,7 +21,12 @@
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 40
+
+[[main]]
+  name = "Links"
+  url = "#links"
+  weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
